--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </ul>
     <h2>Experience</h2>
 <ul>
-<li>The Pizza Factory, Hostess (2015-2018)</li>
 <li>Decorworx, Intern (2018)</li>
 <li>Utah Behavior Services, Behavior Technician (2018-2021)</li>
+<li>Web Developer, BYU (2021-present)</li>
 </ul>
     <h2>Contact</h2>
     <ul>
