--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Halsey Curry</title>
   </head>
   <body>
-    <h1>Halsey Curry</h1>
+    <h1>Halsey E. Curry</h1>
 
     <h2>About</h2>
     <p>I was raised in Cedar City, Utah.
